Fixed some spacing at main.css

--- a/webscraper/static/styles/main.css
+++ b/webscraper/static/styles/main.css
@@ -1,132 +1,132 @@
 * {
-    box-sizing: border-box;
-  }
-  
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-weight: 700;
-  }
-  
-  h1 {
-    font-size: calc(32px + 0.5vw);
-  }
-  
-  h2 {
-    font-size: calc(26px + 0.5vw);
-  }
-  
-  h3 {
-    font-size: calc(22px + 0.5vw);
-  }
-  
-  h4 {
-    font-size: calc(20px + 0.5vw);
-  }
-  
-  h5 {
-    font-size: calc(15px + 0.5vw);
-  }
-  
-  h6 {
-    font-size: calc(13px + 0.5vw);
-  }
-  
-  body {
-    font-family: 'Poppins', sans-serif;
-    background-color: rgb(240, 240, 240);
-    background-size: 100% 100%;
-    background-position: center;
-    background-attachment: fixed;
-    background-repeat: no-repeat;
-    padding-top: 76px;
-  }
-  
-  html {
-    scroll-behavior: smooth;
-    scroll-padding-top: 76px;
-  }
-  
-  .navbar {
-    top: 0;
-    width: 100%;
-    z-index: 1;
-  }
-  
-  .navbar-nav .nav-item {
-    transition: 300ms;
-  }
-  
-  .navbar-nav .nav-item:hover {
-    background-color: rgba(0, 0, 0, 0.5);
-    color: white;
-    transition: 300ms;
-  }
-  
-  .homediv{
-    height: 30rem !important;
-    width: 100% !important;
-    margin: 0 !important;
-    padding: 0 !important;
+  box-sizing: border-box;
 }
 
-.homeimage{
-    background-color: rgb(87, 87, 87) !important;
-
-    background-size: 15rem 15rem !important;
-    background-repeat: repeat !important;
-    background-attachment: fixed !important;
-    background-position: top;
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-weight: 700;
 }
 
-  .homeup {
-    opacity: 0.5;
-    position: fixed;
-    right: 0;
-    bottom: 0;
-    transition: 300ms;
-    z-index: 1;
-  }
-  
-  .homeup:hover {
-    opacity: 1;
-    transition: 300ms;
-  }
-  
-  .homekey {
-    min-height: 300px;
-    transition: 300ms;
-    position: relative;
-  }
-  
-  .homeregister {
-    background-color: rgb(190, 0, 0);
-    color: white;
-  }
-  
-  .homeregister:hover {
-    background-color: rgb(180, 0, 0);
-  }
-  
+h1 {
+  font-size: calc(32px + 0.5vw);
+}
+
+h2 {
+  font-size: calc(26px + 0.5vw);
+}
+
+h3 {
+  font-size: calc(22px + 0.5vw);
+}
+
+h4 {
+  font-size: calc(20px + 0.5vw);
+}
+
+h5 {
+  font-size: calc(15px + 0.5vw);
+}
+
+h6 {
+  font-size: calc(13px + 0.5vw);
+}
+
+body {
+  font-family: 'Poppins', sans-serif;
+  background-color: rgb(240, 240, 240);
+  background-size: 100% 100%;
+  background-position: center;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+
+}
+
+html {
+  scroll-behavior: smooth;
+  scroll-padding-top: 76px;
+}
+
+.navbar {
+  top: 0;
+  width: 100%;
+  z-index: 1;
+}
+
+.navbar-nav .nav-item {
+  transition: 300ms;
+}
+
+.navbar-nav .nav-item:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: white;
+  transition: 300ms;
+}
+
+.homediv {
+  height: 30rem !important;
+  width: 100% !important;
+  margin: 0 !important;
+  padding: 0 !important;
+}
+
+.homeimage {
+  background-color: rgb(87, 87, 87) !important;
+
+  background-size: 15rem 15rem !important;
+  background-repeat: repeat !important;
+  background-attachment: fixed !important;
+  background-position: top;
+}
+
+.homeup {
+  opacity: 0.5;
+  position: fixed;
+  right: 0;
+  bottom: 0;
+  transition: 300ms;
+  z-index: 1;
+}
+
+.homeup:hover {
+  opacity: 1;
+  transition: 300ms;
+}
+
+.homekey {
+  min-height: 300px;
+  transition: 300ms;
+  position: relative;
+}
+
+.homeregister {
+  background-color: rgb(190, 0, 0);
+  color: white;
+}
+
+.homeregister:hover {
+  background-color: rgb(180, 0, 0);
+}
+
+.homesection {
+  width: 100%;
+}
+
+@media only screen and (min-width: 768px) {
   .homesection {
-    width: 100%;
+    padding-left: 10%;
+    padding-right: 10%;
   }
-  
-  @media only screen and (min-width: 768px) {
-    .homesection {
-      padding-left: 10%;
-      padding-right: 10%;
-    }
+}
+
+@media only screen and (min-width: 992px) {
+  .homesection {
+    padding-left: 20%;
+    padding-right: 20%;
   }
-  
-  @media only screen and (min-width: 992px) {
-    .homesection {
-      padding-left: 20%;
-      padding-right: 20%;
-    }
 }
 
 .btn-forgot {
@@ -143,124 +143,125 @@
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
 }
 
 .myStyle {
-    background-color: gainsboro;
-    position: fixed;
-    height: 100vh;
-    width: 20vw;
-    top: 0;
-    right: 0;
-    margin-right: -20vw !important;
-    transition: 1s;
-    z-index: 1;
-  }
+  background-color: gainsboro;
+  position: fixed;
+  height: 100vh;
+  width: 20vw;
+  top: 0;
+  right: 0;
+  margin-right: -20vw !important;
+  transition: 1s;
+  z-index: 1;
+}
 
-  .newStyle {
-    background-color: gainsboro;
-    position: fixed;
-    height: 100vh;
-    width: 20vw;
-    top: 0;
-    right: 0;
-    transition: 1s;
-    z-index: 1;
-  }
+.newStyle {
+  background-color: gainsboro;
+  position: fixed;
+  height: 100vh;
+  width: 20vw;
+  top: 0;
+  right: 0;
+  transition: 1s;
+  z-index: 1;
+}
 
 /* Off canvas */
 
 .main-content {
-    padding-top: 40px;
+  padding-top: 40px;
 }
 
 .his-fav-menu .sidebar-btn {
-    position: fixed;
-    right:30px;
-    padding-right:20px;
-    z-index: 2;
+  position: fixed;
+  right: 30px;
+  padding-right: 20px;
+  z-index: 2;
 }
 
 .his-fav-menu .sidebar-btn .open-btn {
-    font-size: 30px;
-    color: #ffffff;
-    justify-content: right;
+  font-size: 30px;
+  color: #ffffff;
+  justify-content: right;
 }
 
 .offcanvas-menu {
-    position: fixed;
-    z-index: 2;
-    top: 5px;
-    right: 0px;
-    background: #212121;
-    width: 350px;
-    display: flex;
-    align-items: center;
-    transform: translatex(100%);
-    transition: all .4s ease;
-    border-radius: 20px 0 0 20px;
-    box-shadow: 5px 5px 10px #000000;
+  position: fixed;
+  z-index: 2;
+  top: 5px;
+  right: 0px;
+  background: #212121;
+  width: 350px;
+  display: flex;
+  align-items: center;
+  transform: translatex(100%);
+  transition: all .4s ease;
+  border-radius: 20px 0 0 20px;
+  box-shadow: 5px 5px 10px #000000;
 }
 
 .offcanvas-menu.active {
-    transform: translateX(0);
+  transform: translateX(0);
 }
 
 .close-btn {
-    position: absolute;
-    top: 5px;
-    left: 15px;
-    font-size: 30px;
-    color: #fff;
+  position: absolute;
+  top: 5px;
+  left: 15px;
+  font-size: 30px;
+  color: #fff;
 }
 
 #hideMe {
-    -moz-animation: cssAnimation 0s ease-in 5s forwards;
-    /* Firefox */
-    -webkit-animation: cssAnimation 0s ease-in 5s forwards;
-    /* Safari and Chrome */
-    -o-animation: cssAnimation 0s ease-in 5s forwards;
-    /* Opera */
-    animation: cssAnimation 0s ease-in 5s forwards;
-    -webkit-animation-fill-mode: forwards;
-    animation-fill-mode: forwards;
+  -moz-animation: cssAnimation 0s ease-in 5s forwards;
+  /* Firefox */
+  -webkit-animation: cssAnimation 0s ease-in 5s forwards;
+  /* Safari and Chrome */
+  -o-animation: cssAnimation 0s ease-in 5s forwards;
+  /* Opera */
+  animation: cssAnimation 0s ease-in 5s forwards;
+  -webkit-animation-fill-mode: forwards;
+  animation-fill-mode: forwards;
 }
 
 @keyframes cssAnimation {
-    to {
-        width:0;
-        height:0;
-        overflow:hidden;
-    }
+  to {
+    width: 0;
+    height: 0;
+    overflow: hidden;
+  }
 }
 
 @-webkit-keyframes cssAnimation {
-    to {
-        width:0;
-        height:0;
-        visibility:hidden;
-    }
+  to {
+    width: 0;
+    height: 0;
+    visibility: hidden;
+  }
 }
 
 ::-webkit-scrollbar {
-    width: 0px;
-    background: transparent; /* make scrollbar transparent */
+  width: 0px;
+  background: transparent;
+  /* make scrollbar transparent */
 }
 
 
 #homearrow {
-    display: none;
-    transition: 1s;
-  }
-  
-  #homearrow.show {
-    display: block;
-  }
-  
-  #myDIV {
-    transition: 1s;
-  }
-  
+  display: none;
+  transition: 1s;
+}
+
+#homearrow.show {
+  display: block;
+}
+
+#myDIV {
+  transition: 1s;
+}
